src/components/TimeCard/TimeCard.module.css
.card {
  width: 320px;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  border-top-left-radius: var(--borderRadius);
  border-top-right-radius: var(--borderRadius);
  overflow: hidden;
}

.header img {
  transform: translate(-18px, -10px);
}

.main {
  background-color: var(--darkBlue);
}

.flexGrid {
  background-color: inherit;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
}

.flexGrid > * {
  flex: 2 1 50%;
}

